# AirbnbChallenge_1

./: db.sqlite3  pyproject.toml
config/: settings.py
tweets/: admin.py  models.py
tweets/migrations/: 0001_initial.py
